k8s/k8s-jenkins-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
